Wed Nov 24 11:58:08 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_connector.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_dds_ex_base.cpp:
          Fixed problem with templated connectors without a base, enabled
          dds_connector for all templated connectors, will need to rename
          the visitors soon

Wed Nov 24 11:01:15 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_connector.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_dds_ex_base.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_dds_exs.cpp:
        * TAO_IDL/be/be_visitor_structure/serializer_op_ch.cpp:
        * TAO_IDL/be_include/be_interface.h:
        * TAO_IDL/be_include/be_visitor_connector/connector_dds_ex_base.h:
        * TAO_IDL/be_include/be_visitor_connector/connector_dds_exh.h:
          Extended support for non dds4ccm templated connectors

Tue Nov 23 09:15:23 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>

        * TAO_IDL/be/be_visitor_component/servant_svh.cpp:
        Set unused member variable provide_ in Servant class between ifdef lw_ccm.

Mon Nov 22 19:57:23 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/lex.yy.cpp:
        * TAO_IDL/driver/drv_preproc.cpp:

          Added checks for failure to open a file or to create
          an absolute file pathname. Most of these checks are
          in code that is specific to VMS.

Mon Nov 22 11:31:10 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tao/Valuetype/AbstractBase.h:
        * tao/Valuetype/AbstractBase.cpp:
        * tao/Valuetype/AbstractBase.inl:
        * tao/Valuetype/AbstractBase_T.cpp:
          Fixed a leak described in bug#3879. Also refactored the AbstractBase
          code so that it become simpler and more standard compliant.

        * tao/Synch_Invocation.cpp:
        * bin/tao_orb_tests.lst: